# mingw_lib_kit

./: .gitignore  LICENSE  README.md  Toolchain-mingw.cmake  build_all.sh  build_clean.sh  build_epoxy.sh  build_first.sh  build_freetype.sh  build_libpng.sh  build_libxml2.sh  build_llvm.sh  build_llvm2.sh  build_llvm_osx.sh  build_mesa.sh  build_mesa_osx.sh  build_openal.sh  build_sdl2.sh  build_zlib.sh  dsound.h  extract_sdl2.sh  make_package.sh
test/: CMakeLists.txt  Toolchain-mingw.cmake  build_cmake.sh  openal_playback.cpp
test/cmake/: FindOpenAL.cmake  FindOpenGL.cmake  Findepoxy.cmake
